reduce size of font on feature buttons on mobile devices to fix display issue on right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,7 +507,7 @@ label {
         margin: 10%;
         border-radius: 10px;
         text-align: center;
-        width: 280px;
+        width: 250px;
         height: 300px;
         
     
@@ -537,6 +537,13 @@ label {
         border: #3a3a3a solid 2px;
         background-size: cover;
     
+}
+
+.features div {
+    
+    font-size: 36px;
+    
+
 }
 
 .features {
